# ServerFramework

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  dump.sh  issues.json  issues.ps1  requirements.txt
src/: AbstractTest.py  Framework.Test.md  Framework.md  Localization.py  app.py  conftest.py  conftest_test.py  docs.en.json  pyproject.toml
src/database/: AbstractDBTest.py  AbstractDatabaseEntity.py  AbstractDatabaseEntity_test.py  DB.Management.md  DB.Patterns.md  DB.Permissions.md  DB.SeededUsers.md  DB.Seeding.md  DB.Test.md  DB_Auth_test.py  DB_Extensions_test.py  DB_Providers_test.py  DatabaseManager.py  DatabaseManager_test.py  StaticPermissions.py  StaticPermissions_test.py  StaticSeeder.py  StaticSeeder_test.py
src/database/migrations/: AbstractMigrationTest.py  DB.Migration.md  Migration.py  Migration_meta_test.py  Migration_mock_test.py  Migration_real_test.py  env.py
src/endpoints/: AbstractEPMatrixTest.py  AbstractEPTest.py  AbstractEPTest_helper_test.py  AbstractGQLTest.py  EP.Abstraction.md  EP.GQL.md  EP.Patterns.md  EP.Router.md  EP.Schema.md  EP.Test.md  EP_Auth_test.py  EP_Extensions_test.py  EP_Providers_test.py
src/extensions/: AbstractEXTTest.py  AbstractExtensionProvider.py  AbstractExtensionProvider_test.py  AbstractExternalModel.py  AbstractPRVTest.py  EXT.Patterns.md  EXT.Test.md  PRV.External.md  PRV.Patterns.md  PRV.Test.md
src/extensions/auth_mfa/: BLL_Auth_MFA.py  BLL_Auth_MFA_test.py  DB_Auth_MFA_test.py  EP.Schema.auth_mfa.md  EP_Auth_MFA_test.py  EXT.auth_mfa.md  EXT_Auth_MFA.py  EXT_Auth_MFA_test.py
src/extensions/database/: BLL_Database.py  EXT.database.md  EXT_Database.py  EXT_Database_test.py  InfluxDB.py  InfluxDB_Database_test.py  PRV_InfluxDB.py  PRV_InfluxDB_test.py  PRV_SQLite.py  PRV_SQLite_test.py  SQLite.py  SQLite_Database_test.py
src/extensions/email/: BLL_EMail.py  BLL_EMail_test.py  BLL_SendGrid_Email.py  EXT.email.md  EXT_EMail.py  EXT_EMail_test.py  PRV_SendGrid_EMail.py  (+1 more)
src/lib/: AbstractPydantic2.py  AbstractPydantic2Test.py  AbstractPydantic2Test_test.py  Dependencies.py  Dependencies_test.py  Environment.py  Environment_test.py  LIB.Dependencies.md  LIB.Logging.md  LIB.Overview.md  LIB.Pydantic.md  LIB.Pydantic2FastAPI.md  LIB.RequestContext.md  Logging.py  Pydantic.py  Pydantic2FastAPI.py  Pydantic2FastAPI_test.py  Pydantic2Manager.py  Pydantic2Manager_test.py  Pydantic2SDKHandler.py  Pydantic2SDKHandler_test.py  Pydantic2SQLAlchemy.py  Pydantic2SQLAlchemy_test.py  Pydantic2Strawberry.md  Pydantic2Strawberry.py  Pydantic2Strawberry_test.py  Pydantic_test.py  RequestContext.py
src/logic/: AbstractBLLTest.py  AbstractLogicManager.py  AbstractLogicManager_test.py  AbstractSVCTest.py  AbstractService.py  AbstractService_test.py  BLL.Abstraction.md  BLL.Authentication.md  BLL.Hooks.md  BLL.Patterns.md  BLL.Schema.md  BLL.Test.md  BLL_Auth.py  BLL_Auth_test.py  BLL_Extensions.py  BLL_Extensions_test.py  BLL_Providers.py  BLL_Providers_test.py  SVC.Patterns.md  SVC.Test.md
src/sdk/: AbstractSDKHandler.py  AbstractSDKTest.py  SDK.Patterns.md  SDK.Publish.md  SDK.Test.md  SDK.py  SDK_Auth.py  SDK_Auth_test.py  SDK_Extensions.py  SDK_Extensions_test.py  SDK_Providers.py  SDK_Providers_test.py
(+52 files in other folders)
